Add page detail

--- a/app/detail.html
+++ b/app/detail.html
@@ -29,10 +29,105 @@
 						<!-- detail__content -->
 						<div class="detail__content">
 
+							<!-- cart-detail -->
 							<div class="detail__content-cart cart-detail">
-								
+								<div class="cart-detail__row">
+									<div class="cart-detail__images">
+										<div class="cart-detail__slider">
+											<div class="cart-detail__slider-item">
+												<img src="img/01.jpg" alt="">
+											</div>
+											<div class="cart-detail__slider-item">
+												<img src="img/01.jpg" alt="">
+											</div>
+										</div>
+										<div class="cart-detail__box">
+											<div class="cart-detail__box-item">
+												<img src="img/01.jpg" alt="">
+											</div>
+											<div class="cart-detail__box-item">
+												<img src="img/01.jpg" alt="">
+											</div>
+											<div class="cart-detail__box-item">
+												<img src="img/01.jpg" alt="">
+											</div>
+											<div class="cart-detail__box-item">
+												<img src="img/01.jpg" alt="">
+											</div>
+											<div class="cart-detail__box-item">
+												<img src="img/01.jpg" alt="">
+											</div>
+										</div>
+									</div>
+									<div class="cart-detail__content">
+										<div class="cart-detail__title">Gucci GG1008 Eyeglasses Gucci Eyeglasses</div>
+										<div class="cart-detail__rating">
+											<ul class="cart-detail__rating-list">
+												<li class="cart-detail__rating-item"><a class="cart-detail__rating-link" href="#"><i class="cart-detail__rating-icon icon-star"></i></a></li>
+												<li class="cart-detail__rating-item"><a class="cart-detail__rating-link" href="#"><i class="cart-detail__rating-icon icon-star"></i></a></li>
+												<li class="cart-detail__rating-item"><a class="cart-detail__rating-link" href="#"><i class="cart-detail__rating-icon icon-star"></i></a></li>
+												<li class="cart-detail__rating-item"><a class="cart-detail__rating-link" href="#"><i class="cart-detail__rating-icon icon-star"></i></a></li>
+												<li class="cart-detail__rating-item"><a class="cart-detail__rating-link" href="#"><i class="cart-detail__rating-icon icon-star"></i></a></li>
+											</ul>
+											<a class="cart-detail__rating-reviews" href="#">288 Reviews  | </a>
+											<a class="cart-detail__rating-reviews" href="#">6 Questions Answered</a>
+										</div>
+										<div class="cart-detail__price">$15.00</div>
+										<div class="cart-detail__stock">AVAILABILITY: <span>IN STOCK</span></div>
+										<div class="cart-detail__descr">High Resolution: Yes, Widget Ready: Yes, Compatible Browsers: IE10, IE11, Firefox, Safari, Opera, Chrome, Compatible With: WPML, WooCommerce 2.5, Visual Composer 4.11.2.1, Software Version: WordPress 4.5.2, WordPress 4.5.1, WordPress 4.5, WordPrvess 4.4.2, WordPress 4.4.1, WordPress 4.4, Columns: 4+</div>
+										<div class="cart-detail__color">
+											<div class="cart-detail__color-title">Color:</div>
+											<ul class="cart-detail__color-list">
+												<li class="cart-detail__color-item active">
+													<img src="img/cart/04.jpg" alt="">
+												</li>
+												<li class="cart-detail__color-item">
+													<img src="img/cart/03.jpg" alt="">
+												</li>
+												<li class="cart-detail__color-item">
+													<img src="img/cart/01.jpg" alt="">
+												</li>
+												<li class="cart-detail__color-item">
+													<img src="img/cart/07.jpg" alt="">
+												</li>
+											</ul>
+										</div>
+										<div class="cart-detail__actions">
+											<div class="cart-detail__actions-quantity"></div>
+											<a class="cart-detail__actions-btn btn" href="#">Add to cart</a>
+											<div class="cart-detail__actions-shuffle"><i class="icon-shuffle"></i>Add to compare</div>
+											<div class="cart-detail__actions-like"><i class="icon-heart"></i>Add to wishlist</div>
+										</div>
+										<div class="cart-detail__actions">
+											<div class="cart-detail__actions-company">
+												<ul class="cart-detail__actions-list">
+													<li class="cart-detail__actions-item">SKU:</li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">WS1020</a></li>
+												</ul>
+											</div>
+											<div class="cart-detail__actions-categories">
+												<ul class="cart-detail__actions-list">
+													<li class="cart-detail__actions-item">Categories:</li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Accessories,</a></li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Headphones</a></li>
+												</ul>
+											</div>
+											<div class="cart-detail__actions-tags">
+												<ul class="cart-detail__actions-list">
+													<li class="cart-detail__actions-item">Tags:</li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Denon,</a></li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Music,</a></li>
+													<li class="cart-detail__actions-item"><a class="cart-detail__actions-link" href="#">Over-Ear</a></li>
+												</ul>
+											</div>
+										</div>
+									</div>
+									
+								</div>
 							</div>
+							<!-- cart-detail end -->
 
+							<!-- tabs -->
 							<div class="detail__content-tabs tabs">
 								<div class="tabs">
 									<ul class="tabs__nav sidebar__title">
@@ -58,6 +153,7 @@
 									</div>
 								</div>
 							</div>
+							<!-- tabs end -->
 
 							<!-- popular-product -->
 							<div class="detail__content-popular popular-product">
