--- a/app/detail.html
+++ b/app/detail.html
@@ -35,27 +35,36 @@
 									<div class="cart-detail__images">
 										<div class="cart-detail__slider">
 											<div class="cart-detail__slider-item">
-												<img src="img/01.jpg" alt="">
+												<img src="img/special-product/red.png" alt="">
 											</div>
 											<div class="cart-detail__slider-item">
-												<img src="img/01.jpg" alt="">
+												<img src="img/special-product/blue.png" alt="">
+											</div>
+											<div class="cart-detail__slider-item">
+												<img src="img/special-product/red.png" alt="">
+											</div>
+											<div class="cart-detail__slider-item">
+												<img src="img/special-product/blue.png" alt="">
+											</div>
+											<div class="cart-detail__slider-item">
+												<img src="img/special-product/blue.png" alt="">
 											</div>
 										</div>
 										<div class="cart-detail__box">
 											<div class="cart-detail__box-item">
-												<img src="img/01.jpg" alt="">
+												<img src="img/special-product/red.png" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/01.jpg" alt="">
+												<img src="img/special-product/blue.png" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/01.jpg" alt="">
+												<img src="img/special-product/red.png" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/01.jpg" alt="">
+												<img src="img/special-product/blue.png" alt="">
 											</div>
 											<div class="cart-detail__box-item">
-												<img src="img/01.jpg" alt="">
+												<img src="img/special-product/blue.png" alt="">
 											</div>
 										</div>
 									</div>
@@ -79,21 +88,26 @@
 											<div class="cart-detail__color-title">Color:</div>
 											<ul class="cart-detail__color-list">
 												<li class="cart-detail__color-item active">
-													<img src="img/cart/04.jpg" alt="">
+													<img src="img/special-product/blue-darker.png" alt="">
 												</li>
 												<li class="cart-detail__color-item">
-													<img src="img/cart/03.jpg" alt="">
+													<img src="img/special-product/blue.png" alt="">
 												</li>
 												<li class="cart-detail__color-item">
-													<img src="img/cart/01.jpg" alt="">
+													<img src="img/special-product/brown.png" alt="">
 												</li>
 												<li class="cart-detail__color-item">
-													<img src="img/cart/07.jpg" alt="">
+													<img src="img/special-product/dark.png" alt="">
 												</li>
 											</ul>
 										</div>
 										<div class="cart-detail__actions">
-											<div class="cart-detail__actions-quantity"></div>
+											<div class="cart-detail__actions-quantity">
+												Qty:
+												<div class="quantity">
+													<input class="nights" type="number" min="1" max="10" step="1" value="1">
+												</div>
+											</div>
 											<a class="cart-detail__actions-btn btn" href="#">Add to cart</a>
 											<div class="cart-detail__actions-shuffle"><i class="icon-shuffle"></i>Add to compare</div>
 											<div class="cart-detail__actions-like"><i class="icon-heart"></i>Add to wishlist</div>
