Fix header and add adaptive

--- a/app/_header.html
+++ b/app/_header.html
@@ -53,7 +53,9 @@
 										</ul>
 									</div> -->
 									<div class="menu__submenu-column">
-										<img class="menu__submenu-img" src="img/information_01/01.jpg" alt="">
+										<a href="#">
+											<img class="menu__submenu-img" src="img/information_01/01.jpg" alt="">
+										</a>
 									</div>
 								</div>
 							</ul>
@@ -82,16 +84,17 @@
 								<li class="menu__item menu__dropdown-item"><a href="about.html" class="menu__link menu__dropdown-link">About</a></li>
 							</ul>
 						</li>
-						<li class="menu__item menu__item-search"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
+					</ul>
+					<div class="menu__item menu__item-search content__block_item"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
 						<div class="search">
 							<form class="search__form" action="#">
 								<input class="search__form-text" type="text" placeholder="Search entire store here">
 								<button class="search__form-btn">search</button>
 							</form>
 						</div>
-						</li>
-					</ul>
+					</div>
 				</nav>
+
 
 				<div class="header__basket basket">
 					<div class="basket__setting">
@@ -148,15 +151,15 @@
 						<div class="basket__wallet-icon">
 							<i class="icon-basket"></i>
 							<div class="basket__wallet-price">
-								<span>2</span> item(s) - <span>$100.00</span>
+								<span>5</span> item(s) - <span>$100.00</span>
 							</div>
 						</div>
 
 						<div class="wallet">
-							<div class="wallet__cart" id="wallet__cart_1">
+							<div class="wallet__cart">
 								<div class="wallet__cart-img">
 									<a href="#">
-									<img src="img/01.jpg" alt="">
+										<img src="img/cart/06.jpg" alt="">
 									</a>
 								</div>
 								<div class="wallet__cart-body">
@@ -167,40 +170,48 @@
 							</div>
 							<div class="wallet__cart">
 								<div class="wallet__cart-img">
-									<img src="img/01.jpg" alt="">
+									<a href="#">
+										<img src="img/cart/02.jpg" alt="">
+									</a>
 								</div>
 								<div class="wallet__cart-body">
-									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<a class="wallet__cart-title" href="#">Mr. Coffee 10 Cup Coffee Maker</a>
 									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
 									<a class="wallet__cart-close" href="#">x</a>
 								</div>
 							</div>
 							<div class="wallet__cart">
 								<div class="wallet__cart-img">
-									<img src="img/01.jpg" alt="">
+									<a href="#">
+										<img src="img/cart/08.jpg" alt="">
+									</a>
 								</div>
 								<div class="wallet__cart-body">
-									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<a class="wallet__cart-title" href="#">Mr. Coffee 10 Cup Coffee Maker</a>
 									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
 									<a class="wallet__cart-close" href="#">x</a>
 								</div>
 							</div>
 							<div class="wallet__cart">
 								<div class="wallet__cart-img">
-									<img src="img/01.jpg" alt="">
+									<a href="#">
+										<img src="img/cart/04.jpg" alt="">
+									</a>
 								</div>
 								<div class="wallet__cart-body">
-									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<a class="wallet__cart-title" href="#">Mr. Coffee 10 Cup Coffee Maker</a>
 									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
 									<a class="wallet__cart-close" href="#">x</a>
 								</div>
 							</div>
 							<div class="wallet__cart">
 								<div class="wallet__cart-img">
-									<img src="img/01.jpg" alt="">
+									<a href="#">
+										<img src="img/cart/01.jpg" alt="">
+									</a>
 								</div>
 								<div class="wallet__cart-body">
-									<div class="wallet__cart-title">Mr. Coffee 10 Cup Coffee Maker</div>
+									<a class="wallet__cart-title" href="#">Mr. Coffee 10 Cup Coffee Maker</a>
 									<div class="wallet__cart-price">3 X <span>$15.00</span></div>
 									<a class="wallet__cart-close" href="#">x</a>
 								</div>
