--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -83,7 +83,10 @@
 									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffee Machines</a></li>
 									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Single-Serve Brewers</a></li>
 									<li class="sidebar-nav__item sidebar-nav__item--light"><a class="sidebar-nav__link sidebar-nav__link--light" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
-										<ul class="sidebar-nav__dropdown">
+										<ul class="sidebar-nav__dropdown sidebar-nav__dropdown--img">
+											<div class="sidebar-nav__dropdown-img">
+												<img src="img/sidebar-nav/nav-bg.jpg" alt="">
+											</div>
 											<div class="sidebar-nav__dropdown-row">
 												<div class="sidebar-nav__dropdown-column">
 													<ul>
