--- a/app/index.html
+++ b/app/index.html
@@ -139,13 +139,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
