--- a/app/_header.html
+++ b/app/_header.html
@@ -85,7 +85,7 @@
 							</ul>
 						</li>
 					</ul>
-					<div class="menu__item menu__item-search content__block_item"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
+					<div class="menu__item-search content__block_item"><a class="menu__link menu__link-btn"><i class="icon-search"></i></a>
 						<div class="search">
 							<form class="search__form" action="#">
 								<input class="search__form-text" type="text" placeholder="Search entire store here">
