--- a/app/index.html
+++ b/app/index.html
@@ -177,13 +177,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
@@ -215,13 +215,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
@@ -253,13 +253,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
@@ -291,13 +291,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
@@ -329,13 +329,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
@@ -367,13 +367,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
@@ -405,13 +405,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
@@ -443,13 +443,13 @@
 								</div>
 								<div class="cart__body">
 									<div class="cart__body-header">
-										<ul class="cart__body-star">
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-											<li><i class="icon-star"></i></li>
-										</ul>
+										<div class="cart__rating" data-total-value="0">
+											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
+											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
+										</div>
 										<ul class="cart__body-color">
 											<li></li>
 											<li></li>
