Fix bugs in blocks policy, cart

--- a/app/index.html
+++ b/app/index.html
@@ -13,32 +13,38 @@
 				<div class="main-slider">
 					<div class="main-slider__item">
 						<div class="main-slider__image">
-							<img src="img/main-slider/01.jpg" alt="">
-							<div class="main-slider__content">
-								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-								<a class="main-slider__content-btn btn" href="#">View more</a>
-							</div>
+							<a href="#">
+								<img src="img/main-slider/01.jpg" alt="">
+								<div class="main-slider__content">
+									<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+									<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+									<a class="main-slider__content-btn btn" href="#">View more</a>
+								</div>
+							</a>
 						</div>
 					</div>
 					<div class="main-slider__item">
 						<div class="main-slider__image">
-							<img src="img/main-slider/03.png" alt="">
-							<div class="main-slider__content">
-								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-								<a class="main-slider__content-btn btn" href="#">View more</a>
-							</div>
+							<a href="#">
+								<img src="img/main-slider/03.png" alt="">
+								<div class="main-slider__content">
+									<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+									<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+									<a class="main-slider__content-btn btn" href="#">View more</a>
+								</div>
+							</a>
 						</div>
 					</div>
 					<div class="main-slider__item">
 						<div class="main-slider__image">
-							<img src="img/01.jpg" alt="">
-							<div class="main-slider__content">
-								<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
-								<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
-								<a class="main-slider__content-btn btn" href="#">View more</a>
-							</div>
+							<a href="#">
+								<img src="img/01.jpg" alt="">
+								<div class="main-slider__content">
+									<div class="main-slider__content-title"><span>A perfect</span> cup, mug, or carafe every time</div>
+									<div class="main-slider__content-descr">Customizable settings, strength control, and the most brew size options ensures that you can enjoy your favorite beverages your way.</div>
+									<a class="main-slider__content-btn btn" href="#">View more</a>
+								</div>
+							</a>
 						</div>
 					</div>
 				</div>
@@ -48,72 +54,51 @@
 					<div class="information__row">
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/01.jpg" alt="">
-<!-- 								<div class="information__item-content information__item-content--1">
-									<div class="information__item-title information__item-title--1">Insightfull eye care</div>
-									<div class="information__item-descr">Call today for a comprehensive vision test</div>
-									<a class="information__item-btn information__item-btn--1 btn" href="#">Request Appointment</a>
-								</div> -->
+								<a href="#">
+									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column information__column--bg">
 							<div class="information__item information__item--bg">
-								<img class="information__item-img" src="img/information/03.jpg" alt="">
-<!-- 								<div class="information__item-content information__item-content--2">
-									<div class="information__item-title information__item-title--2">Lest’s create something <span>Awesome</span></div>
-									<a class="information__item-btn btn information__item-btn--2" href="#">SHOP NOW</a>
-								</div> -->
+								<a href="#">
+									<img class="information__item-img" src="img/information/03.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/04.jpg" alt="">
-<!-- 								<div class="information__item-content information__item-content--3">
-									<div class="information__item-title information__item-title--3">Impressa Z9</div>
-									<div class="information__item-descr information__item-descr--3">Sophistication and extravagance</div>
-								</div> -->
+								<a href="#">
+									<img class="information__item-img" src="img/information/04.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/05.jpg" alt="">
-<!-- 								<div class="information__item-content information__item-content--3">
-									<div class="information__item-title information__item-title--3">Impressa Z9</div>
-									<div class="information__item-descr information__item-descr--3">Sophistication and extravagance</div>
-								</div> -->
+								<a href="#">
+									<img class="information__item-img" src="img/information/05.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/06.jpg" alt="">
-<!-- 								<div class="information__item-content information__item-content--4">
-									<div class="information__item-title information__item-title--4">Canberra <span>Coffee</span></div>
-									<div class="information__item-price information__item-price--4">Just <span>$2.5</span></div>
-									<a class="information__item-btn btn information__item-btn--4" href="#">Try it now</a>
-								</div> -->
+								<a href="#">
+									<img class="information__item-img" src="img/information/06.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/04.jpg" alt="">
-<!-- 								<div class="information__item-bookmark">
-									<span>sale off</span>
-									<span>20%</span>
-								</div>
-								<div class="information__item-content information__item-content--5">
-									<div class="information__item-descr information__item-descr--5">Ship within 24Hrs</div>
-									<a class="information__item-btn btn information__item-btn--5" href="#">Buy now</a>
-								</div> -->
+								<a href="#">
+									<img class="information__item-img" src="img/information/04.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/01.jpg" alt="">
-<!-- 								<div class="information__item-content information__item-content--4">
-									<div class="information__item-title information__item-title--4">Canberra <span>Coffee</span></div>
-									<div class="information__item-price information__item-price--4">Just <span>$2.5</span></div>
-									<a class="information__item-btn btn information__item-btn--4" href="#">Try it now</a>
-								</div> -->
+								<a href="#">
+									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								</a>
 							</div>
 						</div>
 					</div>
@@ -128,42 +113,9 @@
 
 					<div class="featured__slider">
 						<div class="featured__slider-item">
-							<div class="featured__cart cart">
-								<div class="cart__overlay">
-									new
-								</div>
-								<div class="cart__img">
-									<a href="#">
-										<img src="img/cart/01.jpg" alt="">
-									</a>
-								</div>
-								<div class="cart__body">
-									<div class="cart__body-header">
-										<div class="cart__rating" data-total-value="0">
-											<div class="cart__rating-item" data-item-value="5"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="4"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="3"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="2"><i class="icon-star"></i></div>
-											<div class="cart__rating-item" data-item-value="1"><i class="icon-star"></i></div>
-										</div>
-										<ul class="cart__body-color">
-											<li></li>
-											<li></li>
-										</ul>
-									</div>
-									<a class="cart__body-title" href="#">
-										BLACK+DECKER 12-Cup Thermal Coffeemaker, Black/Silver, CM2035B | 
-										<span class="cart__body-price">$49.87</span>
-									</a>
-									<div class="cart__body-footer">
-										<a class="cart__body-btn btn" href="#">Add to cart</a>
-										<div class="cart__body-actions">
-											<div class="cart__body-shuffle"><i class="icon-shuffle"></i></div>
-											<div class="cart__body-like active"><i class="icon-heart"></i></div>
-										</div>
-									</div>
-								</div>
-							</div>
+							@@include('_cart.html',{
+								"class__cart":"featured__cart"
+							})
 						</div>
 						<div class="featured__slider-item">
 							<div class="featured__cart cart">
@@ -171,7 +123,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/02.jpg" alt="">
 									</a>
 								</div>
@@ -189,8 +141,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Keurig K-Elite Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, With Iced Coffee Capability, Brushed Gold | 
+									<a class="cart__body-title" href="detail.html">
+										Keurig K-Elite Coffee Maker 
 										<span class="cart__body-price">$163.01</span>
 									</a>
 									<div class="cart__body-footer">
@@ -209,7 +161,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/03.jpg" alt="">
 									</a>
 								</div>
@@ -227,8 +179,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Mr. Coffee 10 Cup Coffee Maker | Optimal Brew Thermal System | 
+									<a class="cart__body-title" href="detail.html">
+										Mr. Coffee 10 Cup Coffee Maker
 										<span class="cart__body-price">$59.99</span>
 									</a>
 									<div class="cart__body-footer">
@@ -247,7 +199,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/04.jpg" alt="">
 									</a>
 								</div>
@@ -265,8 +217,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Keurig K-Select Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, With Strength Control and Hot Water On Demand, Matte Black | 
+									<a class="cart__body-title" href="detail.html">
+										Keurig K-Select Coffee Maker
 										<span class="cart__body-price">$129.45</span>
 									</a>
 									<div class="cart__body-footer">
@@ -285,7 +237,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/05.jpg" alt="">
 									</a>
 								</div>
@@ -303,8 +255,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Keurig K-Classic Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, 6 to 10 oz. Brew Sizes, Black | 
+									<a class="cart__body-title" href="detail.html">
+										Keurig K-Classic Coffee Maker
 										<span class="cart__body-price">$79.00</span>
 									</a>
 									<div class="cart__body-footer">
@@ -323,7 +275,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/06.jpg" alt="">
 									</a>
 								</div>
@@ -341,8 +293,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Cuisinart DCC-3200P1 DCC-3200CP Perfectemp Coffee Maker, 14 Cup Progammable with Glass Carafe, Stainless Steel | 
+									<a class="cart__body-title" href="detail.html">
+										Cuisinart DCC-3200P1 DCC-3200CP Perfectemp Coffee Maker
 										<span class="cart__body-price">$99.95</span>
 									</a>
 									<div class="cart__body-footer">
@@ -361,7 +313,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/07.jpg" alt="">
 									</a>
 								</div>
@@ -379,8 +331,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Hamilton Beach 2-Way Brewer Coffee Maker, Single-Serve and 12-Cup Pot, Stainless Steel (49980A), Carafe | 
+									<a class="cart__body-title" href="detail.html">
+										Hamilton Beach 2-Way Brewer Coffee Maker
 										<span class="cart__body-price">$59.99</span>
 									</a>
 									<div class="cart__body-footer">
@@ -399,7 +351,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/08.jpg" alt="">
 									</a>
 								</div>
@@ -417,8 +369,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Keurig K-Mini Plus Coffee Maker, Single Serve K-Cup Pod Coffee Brewer, Comes With 6 to 12 oz. Brew Size, K-Cup Pod Storage, and Travel Mug Friendly, Black | 
+									<a class="cart__body-title" href="detail.html">
+										Keurig K-Mini Plus Coffee Maker
 										<span class="cart__body-price">$99.99</span>
 									</a>
 									<div class="cart__body-footer">
@@ -437,7 +389,7 @@
 									new
 								</div>
 								<div class="cart__img">
-									<a href="#">
+									<a href="detail.html">
 										<img src="img/cart/09.jpg" alt="">
 									</a>
 								</div>
@@ -455,8 +407,8 @@
 											<li></li>
 										</ul>
 									</div>
-									<a class="cart__body-title" href="#">
-										Ninja CE251 Programmable Brewer, with 12-cup Glass Carafe, Black and Stainless Steel Finish | 
+									<a class="cart__body-title" href="detail.html">
+										Ninja CE251 Programmable Brewer
 										<span class="cart__body-price">$79.99</span>
 									</a>
 									<div class="cart__body-footer">
