Fix page shop-col

--- a/app/all-categories.html
+++ b/app/all-categories.html
@@ -38,7 +38,7 @@
 									</a>
 								</div>
 								<div class="all-categories__body">
-									<a class="all-categories__body-title" href="#">Color coffee maker</a>
+									<a class="all-categories__body-title" href="#">Krups Espresso Machine Launch</a>
 									<div class="all-categories__body-descr">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</div>
 								</div>
 							</div>
