--- a/app/index.html
+++ b/app/index.html
@@ -426,6 +426,9 @@
 				<!-- featured end -->
 				<!-- policy -->
 				<div class="policy policy--black">
+					<div class="policy__bg ibg">
+						<img src="img/policy/overlay.png" alt="">
+					</div>
 					<div class="policy__row">
 						<div class="policy__column">
 							<div class="policy__item">
@@ -518,6 +521,9 @@
 				<!-- special-product end -->
 				<!-- testimonials -->
 				<div class="testimonials">
+					<div class="testimonials__bg ibg">
+						<img src="img/testimonial/bg01.png" alt="">
+					</div>
 					<div class="testimonials__main-title main-title">
 						<span>What client say ?</span>
 						Testimonials
