--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -48,22 +48,30 @@
 					<div class="information__row">
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="#">
+									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="#">
+									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="#">
+									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								</a>
 							</div>
 						</div>
 						<div class="information__column">
 							<div class="information__item">
-								<img class="information__item-img" src="img/information/01.jpg" alt="">
+								<a href="#">
+									<img class="information__item-img" src="img/information/01.jpg" alt="">
+								</a>
 							</div>
 						</div>
 					</div>
@@ -1120,7 +1128,7 @@
 						</div>
 					</div>
 					<div class="policy__column">
-						<div class="policy__item policy__item--white">
+						<div class="policy__item">
 							<div class="policy__item-image policy__item-image--violet">
 								<img src="img/icons/headset.png" alt="">
 							</div>
