Fix block perfect-product

--- a/app/all-categories.html
+++ b/app/all-categories.html
@@ -20,7 +20,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/02.jpg" alt="">
 									</a>
 								</div>
@@ -33,7 +33,7 @@
 						<div class="all-categories__column all-categories__column--bg">
 							<div class="all-categories__item">
 								<div class="all-categories__img all-categories__img--bg">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/05-1.jpg" alt="">
 									</a>
 								</div>
@@ -46,7 +46,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/01.jpg" alt="">
 									</a>
 								</div>
@@ -59,7 +59,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/03.png" alt="">
 									</a>
 								</div>
@@ -72,7 +72,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/04.jpg" alt="">
 									</a>
 								</div>
@@ -85,7 +85,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/11.jpg" alt="">
 									</a>
 								</div>
@@ -98,7 +98,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/06.png" alt="">
 									</a>
 								</div>
@@ -111,7 +111,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/07.jpg" alt="">
 									</a>
 								</div>
@@ -124,7 +124,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/08.jpg" alt="">
 									</a>
 								</div>
@@ -137,7 +137,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/09.jpg" alt="">
 									</a>
 								</div>
@@ -150,7 +150,7 @@
 						<div class="all-categories__column">
 							<div class="all-categories__item">
 								<div class="all-categories__img">
-									<a href="#">
+									<a href="shop-col.html">
 										<img src="img/all-categories/10.jpg" alt="">
 									</a>
 								</div>
