--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -350,8 +350,8 @@
 									<div class="perfect-product__column">
 										<div class="perfect-product__item">
 											<div class="perfect-product__item-img">
-												<a href="#">
-													<img src="img/cart/06.jpg" alt="">
+												<a href="detail.html">
+													<img src="img/cart/02.jpg" alt="">
 												</a>
 											</div>
 											<div class="perfect-product__item-body">
@@ -387,7 +387,7 @@
 									<div class="perfect-product__column">
 										<div class="perfect-product__item">
 											<div class="perfect-product__item-img">
-												<a href="#">
+												<a href="detail.html">
 													<img src="img/cart/08.jpg" alt="">
 												</a>
 											</div>
