--- a/app/_sidebar-new.html
+++ b/app/_sidebar-new.html
@@ -1,11 +1,11 @@
 							<div class="@@sidebar-new__class sidebar-new">
 								<div class="sidebar-new__title sidebar__title">@@sidebar-new__title</div>
-								<a href="@@sidebar-new__link-1"> 
+								<a href="#"> 
 									<div class="sidebar-new__item">
 										<div class="sidebar-new__item-img">
-											<img src="@@sidebar-new__img-1" alt="@@sidebar-new__alt-1">
+											<img src="img/cart/02.jpg" alt="">
 										</div>
-										<div class="sidebar-new__item-title">@@sidebar-new__item-title-1<span>@@sidebar-new__item-price-1</span></div>
+										<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C <span>$15.00</span></div>
 									</div>
 								</a>
 								<a href="#"> 
