--- a/app/shop-col.html
+++ b/app/shop-col.html
@@ -85,146 +85,17 @@
 						<div class="shop-col__sidebar">
 
 							<!-- sidebar-nav -->
-							<div class="shop-col__sidebar-nav sidebar-nav">
-								<div class="sidebar-nav__title sidebar-nav__title--light">All Categories</div>
-								<ul class="sidebar-nav__list">
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffee Machines</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Single-Serve Brewers</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a class="sidebar-nav__link sidebar-nav__link--light" href="#">Shop<i class="icon-angle-right sidebar-nav__icon"></i></a>
-										<ul class="sidebar-nav__dropdown sidebar-nav__dropdown--img">
-											<div class="sidebar-nav__dropdown-img">
-												<img src="img/sidebar-nav/nav-bg.jpg" alt="">
-											</div>
-											<div class="sidebar-nav__dropdown-row">
-												<div class="sidebar-nav__dropdown-column">
-													<ul>
-														<li class="sidebar-nav__dropdown-title">product types</li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">simple product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">grouped product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">variable product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">external/adffiliate product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">product tag</a></li>
-													</ul>
-												</div>
-												<div class="sidebar-nav__dropdown-column">
-													<ul>
-														<li class="sidebar-nav__dropdown-title">product types</li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">simple product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">grouped product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">variable product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">external/adffiliate product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">product tag</a></li>
-													</ul>
-												</div>
-											</div>
-										</ul>
-									</li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Espresso Machine</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffeemaker Combos</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffee Makers</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a class="sidebar-nav__link sidebar-nav__link--light" href="#">French Presses<i class="icon-angle-right sidebar-nav__icon"></i></a>
-										<ul class="sidebar-nav__dropdown">
-											<div class="sidebar-nav__dropdown-row">
-												<div class="sidebar-nav__dropdown-column">
-													<ul>
-														<li class="sidebar-nav__dropdown-title">product types</li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">simple product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">grouped product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">variable product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">external/adffiliate product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">product tag</a></li>
-													</ul>
-												</div>
-												<div class="sidebar-nav__dropdown-column">
-													<ul>
-														<li class="sidebar-nav__dropdown-title">product types</li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">simple product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">grouped product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">variable product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">external/adffiliate product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">product tag</a></li>
-													</ul>
-												</div>
-											</div>
-										</ul>
-									</li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Disposable Coffee Filters</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Thermal Carafes</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Coffee & Tea</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a class="sidebar-nav__link sidebar-nav__link--light" href="#">Coffee & Espresso Machine<i class="icon-angle-right sidebar-nav__icon"></i></a>
-										<ul class="sidebar-nav__dropdown">
-											<div class="sidebar-nav__dropdown-row">
-												<div class="sidebar-nav__dropdown-column">
-													<ul>
-														<li class="sidebar-nav__dropdown-title">product types</li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">simple product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">grouped product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">variable product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">external/adffiliate product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">product tag</a></li>
-													</ul>
-												</div>
-												<div class="sidebar-nav__dropdown-column">
-													<ul>
-														<li class="sidebar-nav__dropdown-title">product types</li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">simple product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">grouped product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">variable product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">external/adffiliate product</a></li>
-														<li class="sidebar-nav__item sidebar-nav__dropdown-item"><a href="#" class="sidebar-nav__dropdown-link">product tag</a></li>
-													</ul>
-												</div>
-											</div>
-										</ul>
-									</li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Accessories</a></li>
-									<li class="sidebar-nav__item sidebar-nav__item--light"><a href="#" class="sidebar-nav__link sidebar-nav__link--light">Percolators</a></li>
-								</ul>
-							</div>
+							@@include('_sidebar-nav.html',{
+								"sidebar-nav__class":"shop-col__sidebar-nav",
+								"sidebar-nav__title":"All Categories"
+							})
 							<!-- sidebar-nav end -->
 
 							<!-- sidebar-new -->
-							<div class="shop-col__sidebar-new sidebar-new">
-								<div class="sidebar-new__title sidebar__title">New arrival</div>
-								<a href="#"> 
-									<div class="sidebar-new__item">
-										<div class="sidebar-new__item-img">
-											<img src="img/cart/04.jpg" alt="">
-										</div>
-										<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
-									</div>
-								</a>
-								<a href="#"> 
-									<div class="sidebar-new__item">
-										<div class="sidebar-new__item-img">
-											<img src="img/cart/03.jpg" alt="">
-										</div>
-										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
-										</div>
-									</div>
-								</a>
-								<a href="#"> 
-									<div class="sidebar-new__item">
-										<div class="sidebar-new__item-img">
-											<img src="img/cart/01.jpg" alt="">
-										</div>
-										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
-										</div>
-									</div>
-								</a>
-								<a href="#"> 
-									<div class="sidebar-new__item">
-										<div class="sidebar-new__item-img">
-											<img src="img/cart/07.jpg" alt="">
-										</div>
-										<div class="sidebar-new__item-body">
-											<div class="sidebar-new__item-title">Cuisinart DCC 3000 Coffee on Demand  12-C | <span>$15.00</span></div>
-										</div>
-									</div>
-								</a>
-							</div>
+							@@include('_sidebar-new.html',{
+								"sidebar-new__class":"shop-col__sidebar-new",
+								"sidebar-new__title":"new arrival"
+							})
 							<!-- sidebar-new end -->
 
 							<!-- sidebar-block -->
